Playback UI Updates

--- a/src/app/pages/home/components/list-view/vehicles/vehicle-details/vehicle-details.component.html
+++ b/src/app/pages/home/components/list-view/vehicles/vehicle-details/vehicle-details.component.html
@@ -25,7 +25,7 @@
       <ng-container *ngIf="vehicle; else skeletonOverview">
 
         <span class="text-lg font-semibold">
-          Sensor Overview
+          Overview / Sensors Details
         </span>
 
         <!-- Updated -->
