Removed Warning from console

--- a/src/app/pages/home/components/list-view/vehicles/vehicle-details/vehicle-details.component.html
+++ b/src/app/pages/home/components/list-view/vehicles/vehicle-details/vehicle-details.component.html
@@ -53,7 +53,7 @@
           <span class="font-medium text-gray-500">Odometer</span>
           <span class="text-gray-800">
             <span class="font-semibold">
-              {{ ((vehicle?.apiObject?.device?.details?.lastOdometer) / 1000)?.toFixed(3) || 0 }}
+              {{ ((vehicle?.apiObject?.device?.details?.lastOdometer) / 1000).toFixed(3) || 0 }}
             </span> km
           </span>
         </div>
@@ -62,7 +62,7 @@
           <span class="font-medium text-gray-500">Odometer</span>
           <span class="text-gray-800">
             <span class="font-semibold">
-              {{ ((vehicle?.apiObject?.device?.details?.lastOdometer) / 1000)?.toFixed(3) || 0 }}
+              {{ ((vehicle?.apiObject?.device?.details?.lastOdometer) / 1000).toFixed(3) || 0 }}
             </span> km
           </span>
         </div>
@@ -71,7 +71,7 @@
           <span class="font-medium text-gray-500">Odometer</span>
           <span class="text-gray-800">
             <span class="font-semibold">
-              {{ ((vehicle?.apiObject?.device?.details?.lastOdometer) / 1000)?.toFixed(3) || 0 }}
+              {{ ((vehicle?.apiObject?.device?.details?.lastOdometer) / 1000).toFixed(3) || 0 }}
             </span> km
           </span>
         </div>
@@ -80,7 +80,7 @@
           <span class="font-medium text-gray-500">Odometer</span>
           <span class="text-gray-800">
             <span class="font-semibold">
-              {{ ((vehicle?.apiObject?.device?.details?.lastOdometer) / 1000)?.toFixed(3) || 0 }}
+              {{ ((vehicle?.apiObject?.device?.details?.lastOdometer) / 1000).toFixed(3) || 0 }}
             </span> km
           </span>
         </div>
@@ -89,7 +89,7 @@
           <span class="font-medium text-gray-500">Odometer</span>
           <span class="text-gray-800">
             <span class="font-semibold">
-              {{ ((vehicle?.apiObject?.device?.details?.lastOdometer) / 1000)?.toFixed(3) || 0 }}
+              {{ ((vehicle?.apiObject?.device?.details?.lastOdometer) / 1000).toFixed(3) || 0 }}
             </span> km
           </span>
         </div>
@@ -98,7 +98,7 @@
           <span class="font-medium text-gray-500">Odometer</span>
           <span class="text-gray-800">
             <span class="font-semibold">
-              {{ ((vehicle?.apiObject?.device?.details?.lastOdometer) / 1000)?.toFixed(3) || 0 }}
+              {{ ((vehicle?.apiObject?.device?.details?.lastOdometer) / 1000).toFixed(3) || 0 }}
             </span> km
           </span>
         </div>
@@ -107,7 +107,7 @@
           <span class="font-medium text-gray-500">Odometer</span>
           <span class="text-gray-800">
             <span class="font-semibold">
-              {{ ((vehicle?.apiObject?.device?.details?.lastOdometer) / 1000)?.toFixed(3) || 0 }}
+              {{ ((vehicle?.apiObject?.device?.details?.lastOdometer) / 1000).toFixed(3) || 0 }}
             </span> km
           </span>
         </div>
@@ -116,7 +116,7 @@
           <span class="font-medium text-gray-500">Odometer</span>
           <span class="text-gray-800">
             <span class="font-semibold">
-              {{ ((vehicle?.apiObject?.device?.details?.lastOdometer) / 1000)?.toFixed(3) || 0 }}
+              {{ ((vehicle?.apiObject?.device?.details?.lastOdometer) / 1000).toFixed(3) || 0 }}
             </span> km
           </span>
         </div>
@@ -124,7 +124,7 @@
           <span class="font-medium text-gray-500">Odometer</span>
           <span class="text-gray-800">
             <span class="font-semibold">
-              {{ ((vehicle?.apiObject?.device?.details?.lastOdometer) / 1000)?.toFixed(3) || 0 }}
+              {{ ((vehicle?.apiObject?.device?.details?.lastOdometer) / 1000).toFixed(3) || 0 }}
             </span> km
           </span>
         </div>
