--- a/src/app/pages/home/components/list-view/vehicles/vehicle-details/vehicle-details.component.html
+++ b/src/app/pages/home/components/list-view/vehicles/vehicle-details/vehicle-details.component.html
@@ -29,19 +29,19 @@
         </span>
 
         <!-- Updated -->
-        <div class="flex justify-between items-center px-4 py-3 border-b border-gray-100">
+        <div class="flex justify-between items-center py-3 border-b border-gray-100">
           <span class="font-medium text-gray-500">Updated</span>
           <span class="text-gray-800 font-semibold">{{ vehicle.lastUpdated | timeAgo }}</span>
         </div>
 
         <!-- Address -->
-        <div class="flex justify-between items-center px-4 py-3 border-b border-gray-100">
+        <div class="flex justify-between items-center py-3 border-b border-gray-100">
           <span class="font-medium text-gray-500">Address</span>
           <span class="text-gray-800 font-semibold">{{ vehicle.location || '—' }}</span>
         </div>
 
         <!-- Speed -->
-        <div class="flex justify-between items-center px-4 py-3 border-b border-gray-100">
+        <div class="flex justify-between items-center py-3 border-b border-gray-100">
           <span class="font-medium text-gray-500">Speed</span>
           <span class="text-gray-800">
             <span class="font-semibold">{{ vehicle?.apiObject?.position?.speed || 0 }}</span> km/h
@@ -49,7 +49,7 @@
         </div>
 
         <!-- Odometer -->
-        <div class="flex justify-between items-center px-4 py-3">
+        <div class="flex justify-between items-center py-3">
           <span class="font-medium text-gray-500">Odometer</span>
           <span class="text-gray-800">
             <span class="font-semibold">
@@ -58,7 +58,7 @@
           </span>
         </div>
 
-        <div class="flex justify-between items-center px-4 py-3">
+        <div class="flex justify-between items-center py-3">
           <span class="font-medium text-gray-500">Odometer</span>
           <span class="text-gray-800">
             <span class="font-semibold">
@@ -67,7 +67,7 @@
           </span>
         </div>
 
-        <div class="flex justify-between items-center px-4 py-3">
+        <div class="flex justify-between items-center py-3">
           <span class="font-medium text-gray-500">Odometer</span>
           <span class="text-gray-800">
             <span class="font-semibold">
@@ -76,7 +76,7 @@
           </span>
         </div>
 
-        <div class="flex justify-between items-center px-4 py-3">
+        <div class="flex justify-between items-center py-3">
           <span class="font-medium text-gray-500">Odometer</span>
           <span class="text-gray-800">
             <span class="font-semibold">
@@ -85,7 +85,7 @@
           </span>
         </div>
 
-        <div class="flex justify-between items-center px-4 py-3">
+        <div class="flex justify-between items-center py-3">
           <span class="font-medium text-gray-500">Odometer</span>
           <span class="text-gray-800">
             <span class="font-semibold">
@@ -94,7 +94,7 @@
           </span>
         </div>
 
-        <div class="flex justify-between items-center px-4 py-3">
+        <div class="flex justify-between items-center py-3">
           <span class="font-medium text-gray-500">Odometer</span>
           <span class="text-gray-800">
             <span class="font-semibold">
@@ -103,7 +103,7 @@
           </span>
         </div>
 
-        <div class="flex justify-between items-center px-4 py-3">
+        <div class="flex justify-between items-center py-3">
           <span class="font-medium text-gray-500">Odometer</span>
           <span class="text-gray-800">
             <span class="font-semibold">
@@ -112,7 +112,7 @@
           </span>
         </div>
 
-        <div class="flex justify-between items-center px-4 py-3">
+        <div class="flex justify-between items-center py-3">
           <span class="font-medium text-gray-500">Odometer</span>
           <span class="text-gray-800">
             <span class="font-semibold">
@@ -120,14 +120,7 @@
             </span> km
           </span>
         </div>
-        <div class="flex justify-between items-center px-4 py-3">
-          <span class="font-medium text-gray-500">Odometer</span>
-          <span class="text-gray-800">
-            <span class="font-semibold">
-              {{ ((vehicle?.apiObject?.device?.details?.lastOdometer) / 1000).toFixed(3) || 0 }}
-            </span> km
-          </span>
-        </div>
+       
       </ng-container>
 
       @if(iframeUrl) {
