--- a/src/app/shared/components/generic-path-replay/generic-path-replay.component.html
+++ b/src/app/shared/components/generic-path-replay/generic-path-replay.component.html
@@ -1,7 +1,7 @@
-<div class="bg-[#F9F9F9] shadow-sm border border-gray-200 p-4 h-full">
+<div class="bg-white shadow-sm border border-gray-200 p-4 h-full">
     <app-generic-form-generator [config]="formFields" [initialData]="defaultPlaybackObj"
         (formSubmit)="onFormSubmit($event)"></app-generic-form-generator>
-   <app-playback-path-info />
+    <app-playback-path-info />
 </div>
 
 <app-playback-control-panel />
