User Configuration Done

--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -27,7 +27,7 @@
                 </div>
             </div>
             <div>
-                <p-button icon="pi pi-sign-in" [outlined]="true" (onClick)="handleChildLogins(user)"></p-button>
+                <p-button icon="pi pi-sign-in" [outlined]="true" (onClick)="handleChildLoginFromDetails()"></p-button>
             </div>
         </div>
 
